--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Yann Dufour
+title: Data Science and Statistical Modeling Consulting
 logo: /assets/img/portrait.png
-description: Data Science Consulting
-show_downloads: true
+description: Yann Dufour, PhD
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
