--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Data Science and Statistical Modeling Consulting
-logo: /assets/img/portrait.png
-description: Yann Dufour, PhD
+title: DatInsights
+logo: /assets/img/logo.png
+description: Bioscience and Data Science Consulting
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
