--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: DatInsights
+title: DatInsights<br><br>Data Science<br>Bioscience<br>Consulting
 logo: /assets/img/logo.png
-description: Bioscience and Data Science Consulting
+description:
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
