--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: DatInsights<br><br>Data Science<br>Bioscience<br>Consulting
-logo: /assets/img/logo.png
+title: Data Science<br>Bioscience<br>Consulting
+logo: /assets/img/datinsights_logo.png
 description:
 show_downloads: false
 google_analytics:
